--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>aWeb</title>
 </head>
 <body>
-    <div class="container bg-primary h-100">
+    <div class="container h-100 pb-4 text-muted">
         <nav class="navbar navbar-expand-lg navbar-light" >
             <div class="container ">
                 <a class="navbar-brand" href="#"><img src="/img/logo.PNG" alt="logo"></a>
@@ -20,7 +20,7 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                     <ul class="navbar-nav nav">
                         <li class="nav-item">
-                          <a class="nav-link active" href="#">Home</a>
+                          <a class="nav-link active text-success" href="#">Home</a>
                         </li>
                         <li class="nav-item">
                           <a class="nav-link" href="#">About</a>
@@ -29,13 +29,13 @@
                           <a class="nav-link" href="#">Features</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link">Screenshots</a>
+                          <a class="nav-link" href="#">Screenshots</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link">Team</a>
+                          <a class="nav-link" href="#">Team</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link">Pricing</a>
+                          <a class="nav-link" href="#">Pricing</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
@@ -48,44 +48,46 @@
                             </div>
                           </li>
                         <li class="nav-item">
-                          <a class="nav-link">Blog</a>
+                          <a class="nav-link" >Blog</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link">Contact</a>
+                          <a class="nav-link" href="#">Contact</a>
                         </li>
                       </ul>
                 </div>
             </div>
         </nav>
         <!-- Main Content -->
-        <div class="d-flex justify-content-center">
-
-
-        <div class="card text-center card-custom-style d-flex justify-content-center">
-            <div class="card-body">
-                <h1>
-                    <img src="/img/welcome.PNG" class="card-img-top" alt="Laptop">
-                </h1>
-                <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit...</p>
-                <img src="/img/main-image.jpg" class="card-img" alt="Laptop">
-                <a href="#" class="btn btn-outline-primary rounded-pill px-4 m-2">Get Started</a>
-                <div class="d-block mt-3">
-                    <a href="#" class="card-link text-uppercase">
-                        <i class="fa-brands fa-apple"></i>
-                        App Store
-                    </a>
-                    <a href="#" class="card-link text-uppercase">
-                        <i class="fa-brands fa-google-play"></i>
-                        Google Play
-                    </a>
-                    <a href="#" class="card-link text-uppercase">
-                        <i class="fa-brands fa-windows"></i>
-                        Windows
-                    </a>
+        <div class="d-flex justify-content-center bg-transparent ">
+            <div class="card text-center card-custom-style d-flex justify-content-center w-50 border-white">
+                <div class="card-body">
+                    <h1>
+                        <img src="/img/welcome.PNG" class="card-img-top w-75" alt="welcome">
+                    </h1>
+                    <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit...</p>
+                    <img src="/img/main-image.jpg" class="card-img" alt="Laptop">
+                    <a href="#" class="btn btn-outline-success rounded-pill px-5 m-2">Get Started</a>
+                    <div class="d-block mt-3">
+                        <a href="#" class="card-link text-dark text-uppercase">
+                            <i class="fa-brands fa-apple"></i>
+                            App Store
+                        </a>
+                        <a href="#" class="card-link text-dark text-uppercase">
+                            <i class="fa-brands fa-google-play"></i>
+                            Google Play
+                        </a>
+                        <a href="#" class="card-link text-dark text-uppercase">
+                            <i class="fa-brands fa-windows"></i>
+                            Windows
+                        </a>
+                    </div>
                 </div>
-            </div>
-          </div>
+              </div>
+        </div>
     </div>
+    <!-- footer -->
+    <div class="text-center mt-5">
+        <img src="img/footer.png" class="img-fluid w-100 " alt="">
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.js" integrity="sha512-CX7sDOp7UTAq+i1FYIlf9Uo27x4os+kGeoT7rgwvY+4dmjqV0IuE/Bl5hVsjnQPQiTOhAX1O2r2j5bjsFBvv/A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
