--- a/index.html
+++ b/index.html
@@ -68,15 +68,15 @@
                     <img src="/img/main-image.jpg" class="card-img" alt="Laptop">
                     <a href="#" class="btn btn-outline-success rounded-pill px-5 m-2">Get Started</a>
                     <div class="d-block mt-3">
-                        <a href="#" class="card-link text-dark text-uppercase">
+                        <a href="#" class="card-link text-dark text-uppercase w-25">
                             <i class="fa-brands fa-apple"></i>
                             App Store
                         </a>
-                        <a href="#" class="card-link text-dark text-uppercase">
+                        <a href="#" class="card-link text-dark text-uppercase w-25">
                             <i class="fa-brands fa-google-play"></i>
                             Google Play
                         </a>
-                        <a href="#" class="card-link text-dark text-uppercase">
+                        <a href="#" class="card-link text-dark text-uppercase w-25">
                             <i class="fa-brands fa-windows"></i>
                             Windows
                         </a>
